[package]
name = "credence_delegation"
version = "0.1.0"
edition = "2021"
description = "Credence delegation contract — delegate attestation and management rights"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "22.0", features = ["testutils"] }
credence_errors = { path = "../credence_errors" }

[dev-dependencies]
proptest = { version = "1", default-features = false, features = ["std"] }
